# zanshin

./: CMakeLists.txt
src/akonadi/: CMakeLists.txt  akonadiartifactqueries.cpp  akonadiartifactqueries.h  akonadicontextqueries.cpp  akonadidatasourcequeries.cpp  akonadidatasourcequeries.h  akonadidatasourcerepository.cpp  akonadidatasourcerepository.h  akonadimonitorimpl.cpp  akonadinoterepository.cpp  akonadinoterepository.h  akonadiprojectqueries.cpp  akonadirelationfetchjobinterface.cpp  akonadirelationfetchjobinterface.h  akonadirelationqueries.cpp  akonadirelationqueries.h  akonadirelationrepository.cpp  akonadirelationrepository.h  akonadiserializer.cpp  akonadiserializer.h  akonadiserializerinterface.h  akonadistorage.cpp  akonadistorage.h  akonadistorageinterface.h  akonaditagqueries.cpp  akonaditagqueries.h  akonaditagrepository.cpp  akonaditagrepository.h  akonaditaskqueries.cpp  akonaditaskqueries.h  akonaditaskrepository.cpp  collectionsearchjob.cpp  personsearchjob.cpp
src/app/: CMakeLists.txt  dependencies.cpp  notesmain.cpp  tasksmain.cpp  zanshin-notes.desktop  zanshin-tasks.desktop
src/domain/: CMakeLists.txt  artifactqueries.h  datasource.cpp  datasource.h  datasourcequeries.h  datasourcerepository.h  mergedqueryresultprovider.h  noterepository.h  queryresult.h  queryresultprovider.h  relation.cpp  relation.h  relationqueries.cpp  relationqueries.h  relationrepository.cpp  relationrepository.h  tagqueries.h  tagrepository.h  task.cpp  task.h
src/kontact/: CMakeLists.txt  notes_kontact_plugin.cpp  notes_kontact_plugin.h  notes_part.cpp  notes_part.h  tasks_kontact_plugin.cpp  tasks_kontact_plugin.h  tasks_part.cpp  tasks_part.h  zanshin-notes_part.desktop  zanshin-notes_part.rc  zanshin-notes_plugin.desktop  zanshin-tasks_part.desktop  zanshin-tasks_plugin.desktop
src/presentation/: applicationmodel.cpp  applicationmodel.h  artifacteditormodel.cpp  artifacteditormodel.h  artifactfilterproxymodel.cpp  artifactfilterproxymodel.h  availablepagesmodel.cpp  availablepagesmodel.h  availablesourcesmodel.cpp  availablesourcesmodel.h  contextpagemodel.cpp  contextpagemodel.h  datasourcelistmodel.cpp  inboxpagemodel.cpp  inboxpagemodel.h  metatypes.cpp  pagemodel.h  projectpagemodel.cpp  projectpagemodel.h  querytreemodel.h  querytreenode.h  tagpagemodel.cpp  tagpagemodel.h
src/utils/: CMakeLists.txt  compositejob.cpp  compositejob.h  dependencymanager.h  jobhandler.cpp  jobhandler.h  runner.cpp  runner.h
src/widgets/: CMakeLists.txt  applicationcomponents.cpp  applicationcomponents.h  availablepagesview.cpp  availablepagesview.h  availablesourcesview.cpp  availablesourcesview.h  datasourcedelegate.cpp  editorview.cpp  editorview.h  editorwidget.cpp  editorwidget.h  filterwidget.cpp  filterwidget.h  filterwidget.ui  itemdelegate.cpp  itemdelegate.h  newpagedialog.cpp  pageview.cpp  pageview.h  recurrencewidget.cpp  recurrencewidget.h  recurrencewidget.ui
tests/testlib/: akonadimocks.h
tests/units/akonadi/: akonadiartifactqueriestest.cpp  akonadidatasourcequeriestest.cpp  akonadinotequeriestest.cpp  akonadiprojectqueriestest.cpp  akonadiserializertest.cpp  akonaditagqueriestest.cpp  akonaditaskqueriestest.cpp  akonaditaskrepositorytest.cpp
tests/units/domain/: tasktest.cpp
tests/units/presentation/: artifacteditormodeltest.cpp  pagemodeltest.cpp  querytreemodeltest.cpp  tasklistmodeltest.cpp
tests/units/utils/: compositejobtest.cpp  jobhandlertest.cpp
tests/units/widgets/: editorviewtest.cpp
